Fix: pass delete method to angular directive in order to do the actual deletion

--- a/Termeh.Web/Scripts/app/views/jobs/List.html
+++ b/Termeh.Web/Scripts/app/views/jobs/List.html
@@ -43,10 +43,9 @@
                     <td>{{job.Quantity}}</td>
                     <td>{{job.AssignedTo}}</td>
                     <td>{{job.AttchmentCount}}</td>
-                    <td>
-                    
+                    <td>                    
                         <a href="/Jobs/Edit/{{job.Id}}"><i class="square edit teal icon"></i></a>
-                        <confirmation-Modal title="Delete Job?" data-ng-click="deleteJob(job.Id)" closable="true"/>
+                        <confirmation-Modal title="Delete Job?" id="{{job.Id}}" on-Delete-Job="deleteJob" closable="true"/>
                     </td>
                 </tr>
             </tbody>
