Applying confirmation delete box on job attachment,...

--- a/Termeh.Web/Scripts/app/views/jobs/List.html
+++ b/Termeh.Web/Scripts/app/views/jobs/List.html
@@ -45,7 +45,7 @@
                     <td>{{job.AttchmentCount}}</td>
                     <td>                    
                         <a href="/Jobs/Edit/{{job.Id}}"><i class="square edit teal icon"></i></a>
-                        <confirmation-Modal title="Delete Job?" id="{{job.Id}}" on-Delete-Job="deleteJob" closable="true"/>
+                        <confirmation-Modal title="Deleting job?" id="{{job.Id}}" on-Delete-Job="deleteJob" closable="true"/>
                     </td>
                 </tr>
             </tbody>
