update internal pages info.. Home.html

--- a/Termeh.Web/Scripts/app/views/home/Home.html
+++ b/Termeh.Web/Scripts/app/views/home/Home.html
@@ -3,7 +3,23 @@
     <div class="ui header">Home</div>
     <div class="ui divider"></div>
     <p>
-        This is page is due to change. <br/><br/>
         Welcome to the Termeh application.
+        <br/><br/>
+        This is an effort to build a single page application (SPA) using Microsoft technologies from a different angle. In this project two different suite of technologies glued together for building LOB apps. One of the latest Microsoft technologies in building REST services has been used (WEB API) and on the Client-Side one of the most common Javascript frameworks (AngularJS). 
     </p>
+    <div>
+        Server-Side Tools
+        <ul>
+            <li>Asp.Net WEB API</li>
+            <li>Entity Framework</li>
+            <li>StructureMap</li>
+        </ul>         
+    </div>
+    <div>
+        Client-Side Tools
+        <ul>
+            <li>AngularJS</li>
+            <li>Semantic UI</li>
+        </ul>
+    </div>
 </div>
