Update Internal static pages.. About..

--- a/Termeh.Web/Scripts/app/views/about/About.html
+++ b/Termeh.Web/Scripts/app/views/about/About.html
@@ -3,6 +3,21 @@
     <div class="ui header">About</div>
     <div class="ui divider"></div>
     <p>
-        This is an angular js with C# backend application
+        This is an angular js application with C# backend services (WebAPI).
     </p>
+    <div>
+        Server-Side Tools
+        <ul>
+            <li>Asp.Net WEB API</li>
+            <li>Entity Framework</li>
+            <li>StructureMap</li>
+        </ul>
+    </div>
+    <div>
+        Client-Side Tools
+        <ul>
+            <li>AngularJS</li>
+            <li>Semantic UI</li>
+        </ul>
+    </div>
 </div>
